--- a/src/app/admin/admin-logs/auth-logs/auth-logs.component.scss
+++ b/src/app/admin/admin-logs/auth-logs/auth-logs.component.scss
@@ -24,7 +24,7 @@
 .table-header,
 .table-row {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   border-bottom: 1px solid rgba(255, 255, 255, 0.2);
 }
 
@@ -57,7 +57,7 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  padding-right: 20px;
+  padding: 0 20px;
 }
 
 .pagination {
