--- a/src/app/admin/admin-users/admin-users.component.scss
+++ b/src/app/admin/admin-users/admin-users.component.scss
@@ -11,7 +11,7 @@
 
 .users-table {
   width: 90%;
-  max-width: 1000px;
+  max-width: 1200px;
   position: relative;
   top: 65px;
   background: rgba(255, 255, 255, 0.1);
@@ -69,7 +69,7 @@
   text-align: center;
   min-width: 150px;
   flex-grow: 1;
-  flex-basis: 200px;
+  flex-basis: 250px;
   display: flex;
   justify-content: center;
   align-items: center;
